--- a/styles/general_styles.css
+++ b/styles/general_styles.css
@@ -5,8 +5,11 @@ body {
   padding: 0;
   background: linear-gradient(135deg, #f5f7fa 0%, #e4e8eb 100%);
   min-height: 100vh;
+  position: relative;
 }
-
+main {
+  margin-top: 112px;
+}
 h1,
 h2,
 h3,
