--- a/styles/header.css
+++ b/styles/header.css
@@ -6,10 +6,13 @@ header {
   align-items: center;
   justify-content: space-between;
   flex-direction: row;
-  margin-bottom: 2rem;
   gap: 20px;
   box-shadow: 0 2px 2px var(--black-25);
   box-sizing: border-box;
+  position: fixed;
+  z-index: 999;
+  top: 0px;
+  width: 100%;
 }
 
 header .logo {
@@ -98,10 +101,6 @@ header .icons i:hover::after {
   display: flex;
   justify-content: unset;
   column-gap: 0px;
-}
-
-.mobile-header .icons #wishlist_icon {
-  display: none;
 }
 
 .mobile-menu {
