--- a/styles/headerStyles/categoryDropdown.css
+++ b/styles/headerStyles/categoryDropdown.css
@@ -6,7 +6,9 @@
   display: flex;
   flex-direction: row;
 }
-
+.selected-category-name {
+  font-size: 16px;
+}
 .fake-dropdown-menu {
   display: none;
 }
