--- a/styles/general_styles.css
+++ b/styles/general_styles.css
@@ -5,8 +5,10 @@ body {
   padding: 0;
   background: linear-gradient(135deg, #f5f7fa 0%, #e4e8eb 100%);
   min-height: 100vh;
+  height: 100%;
   position: relative;
 }
+
 main {
   margin-top: 112px;
 }
@@ -43,6 +45,8 @@ p {
   font-size: var(--small);
   line-height: 1.25; /* 17.5px */
 }
-
-@media screen and (max-width: 768px) {
+@media (max-width: 768px) {
+  main {
+    margin-top: 80px;
+  }
 }
