feat: add Instructor object and dynamic related courses rendering
- Created Instructor object to store instructor data (name, job, description, img)
- Added instructor property in course object to hold Instructor instances
- Commented out about-course HTML section temporarily
- Implemented renderRelatedCourses function to dynamically display courses from the same category as the current course

--- a/styles/course-page/course-curriculum.css
+++ b/styles/course-page/course-curriculum.css
@@ -14,7 +14,8 @@
 
 .module-header {
   background: linear-gradient(135deg, #f8fafc 0%, #e2e8f0 100%);
-  padding: 1.5rem;
+  padding: 16px;
+  margin: 0px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -29,7 +30,7 @@
 .module-header p {
   color: var(--black-75);
   font-size: var(--body);
-  margin: 0px;
+  margin: 0px !important;
   padding: 0px;
 }
 .module-duration {
